--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "novenn-auto-task",
-  "productName": "novenn-auto-task",
+  "productName": "帮你发微信",
   "version": "0.0.1",
   "author": "novenn",
   "description": "wechat auto task",
