--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "dependencies": {
     "element-ui": "^2.14.0",
-    "http": "0.0.1-security",
+    "getmac": "^5.17.0",
     "moment": "^2.29.1",
     "robotjs": "^0.5.1",
+    "superagent": "^6.1.0",
     "vue": "2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1"
